Adding some css-html code.

--- a/detail.html
+++ b/detail.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8" />
     <meta name="description" content="Where in the world?" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Detail |Week 1</title>
+    <title>Detail | Week 1</title>
     <link rel="stylesheet" href="./assets/css/detail.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,600&family=Poppins:wght@300&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&family=Open+Sans:ital,wght@1,600&family=Poppins:wght@300&display=swap"
         rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <p class="title">Where in the world?</p>
+            <h2 class="title">Where in the world?</h2>
             <div class="dark-mode">
                 <i class="fa-regular fa-moon"></i>
                 <p>Dark Mode</p>
@@ -45,7 +45,7 @@
 
                 <div class="details">
                     <div class="country-name">
-                        <h2>Belgium</h2>
+                        <h1>Belgium</h1>
                     </div>
                     <div class="info-wrapper">
 
