--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
 
         <header class="header">
-            <h4 class="title">Where in the world?</h4>
+            <p class="title">Where in the world?</p>
             <div class="dark-mode">
                 <i class="fa-regular fa-moon"></i>
                 <p>Dark Mode</p>
