--- a/detail.html
+++ b/detail.html
@@ -4,18 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="description" content="Where in the world?" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail | Week 1</title>
     <link rel="stylesheet" href="./assets/css/detail.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&family=Open+Sans:ital,wght@1,600&family=Poppins:wght@300&display=swap"
-        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@800&family=Open+Sans:ital,wght@1,600&family=Poppins:wght@300&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d20cd21b4f.js" crossorigin="anonymous"></script>
 
 </head>
