--- a/index.html
+++ b/index.html
@@ -5,17 +5,13 @@
     <meta charset="utf-8" />
     <meta name="description" content="Where in the world?" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Index |Week 1</title>
+    <title>Index | Week 1</title>
     <link rel="stylesheet" href="./assets/css/main.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,600&family=Poppins:wght@300&display=swap"
-        rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@800&family=Open+Sans:ital,wght@1,600&family=Poppins:wght@300&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/d20cd21b4f.js" crossorigin="anonymous"></script>
 
 </head>
@@ -24,23 +20,20 @@
     <div class="container">
 
         <header class="header">
-            <p class="title">Where in the world?</p>
-            <div class="dark-mode">
-                <i class="fa-regular fa-moon"></i>
-                <p>Dark Mode</p>
-            </div>
+            <h1 class="title">Where in the world?</h1>
+            <i class="dark-mode fa-regular fa-moon"><span>Dark Mode</span></i>
         </header>
 
         <div class="wrapper">
 
-            <div class="seach-container">
-                <div class="left-side">
+            <div class="seach-filter-container">
+                <div class="search-container">
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <input type="text" placeholder="Search for a country..." />
                 </div>
 
 
-                 <div class="dropdown">
+                <div class="dropdown-container">
                     <div class="dropdown-select">
                         <span class="select">Filter by Region</span>
                         <i class="fa fa-caret-down icon"></i>
@@ -52,32 +45,34 @@
                         <div class="dropdown-list_item">Europe</div>
                         <div class="dropdown-list_item">Oceania</div>
                     </div>
-                 </div>
-                 
+                </div>
+
             </div>
 
 
             <div class="cards-container">
 
                 <div class="card-container">
-                    <div class="img-container">
-                        <img src="assets/images/de.svg">
-                    </div>
+                    <img src="assets/images/de.svg">
 
                     <div class="description-container">
                         <div class="country">
-                            <p>Germany</p>
+                            <h2>Germany</h2>
                         </div>
-                        <span class="population">
-                            <p><strong>Population:</strong> 81,770,900</p>
-                        </span>
-                        <span class="region">
-                            <p><strong>Region: </strong>Europ</p>
-                        </span>
-                        <span class="capital">
-
-                            <p> <strong>Capital: </strong>Berlin</p>
-                        </span>
+                        <ul style="list-style: none;">
+                            <li>
+                                <span class="label">Population:</span>
+                                <span class="value">81,770,900</span>
+                            </li>
+                            <li>
+                                <span class="label">Region:</span>
+                                <span class="value">Europ</span>
+                            </li>
+                            <li>
+                                <span class="label">Capital:</span>
+                                <span class="value">Berlin</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
@@ -86,179 +81,173 @@
 
 
                 <div class="card-container">
-                    <div class="img-container">
-                        <img src="assets/images/us.svg">
-                    </div>
+                    <img src="assets/images/us.svg">
 
                     <div class="description-container">
                         <div class="country">
-                            <p>United States of America</p>
+                            <h2>United States of America</h2>
                         </div>
-                        <span class="population">
-                            <p>
-                                <strong>Population: </strong>
-
-                                323,947,000
-                            </p>
-                        </span>
-                        <span class="region">
-                            <p>
-                                <strong>Region: </strong>
-
-                                America
-                            </p>
-                        </span>
-                        <span class="capital">
-                            <p>
-                                <strong>Capital: </strong>
-                                Washington, D.C.
-                            </p>
-                        </span>
+                        <ul style="list-style: none;">
+                            <li>
+                                <span class="label">Population:</span>
+                                <span class="value">323,947,000</span>
+                            </li>
+                            <li>
+                                <span class="label">Region:</span>
+                                <span class="value">Americas</span>
+                            </li>
+                            <li>
+                                <span class="label">Capital:</span>
+                                <span class="value">Washington, D.C.</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
 
                 <div class="card-container">
-                    <div class="img-container">
-                        <img src="assets/images/br.svg">
-                    </div>
-
+                    <img src="assets/images/br.svg">
                     <div class="description-container">
                         <div class="country">
-                            <p>Brazil</p>
+                            <h2>Brazil</h2>
                         </div>
-                        <span class="population">
-                            <p><strong>Population:</strong> 206,135,893</p>
-
-                        </span>
-                        <span class="region">
-                            <p><strong>Region:</strong> Americas</p>
-
-                        </span>
-                        <span class="capital">
-                            <p><strong>Capital:</strong> Brasília</p>
-
-                        </span>
+                        <ul style="list-style: none;">
+                            <li>
+                                <span class="label">Population:</span>
+                                <span class="value">206,135,893</span>
+                            </li>
+                            <li>
+                                <span class="label">Region:</span>
+                                <span class="value">Americas</span>
+                            </li>
+                            <li>
+                                <span class="label">Capital:</span>
+                                <span class="value">Brasília</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
 
                 <div class="card-container">
-                    <div class="img-container">
-                        <img src="assets/images/is.svg">
-                    </div>
+                    <img src="assets/images/is.svg">
 
                     <div class="description-container">
                         <div class="country">
-                            <p>Iceland</p>
+                            <h2>Iceland</h2>
                         </div>
-                        <span class="population">
-                            <p><strong>Population:</strong> 334,300</p>
-
-                        </span>
-                        <span class="region">
-                            <p><strong>Region:</strong> Europe</p>
-
-                        </span>
-                        <span class="capital">
-                            <p><strong>Capital:</strong> Reykjavík</p>
-
-                        </span>
+                        <ul style="list-style: none;">
+                            <li>
+                                <span class="label">Population:</span>
+                                <span class="value">334,300</span>
+                            </li>
+                            <li>
+                                <span class="label">Region:</span>
+                                <span class="value">Europe</span>
+                            </li>
+                            <li>
+                                <span class="label">Capital:</span>
+                                <span class="value">Reykjavík</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
 
                 <div class="card-container">
-                    <div class="img-container">
-                        <img src="assets/images/af.svg">
-                    </div>
+                    <img src="assets/images/af.svg">
 
                     <div class="description-container">
                         <div class="country">
-                            <p>Afghanistan</p>
+                            <h2>Afghanistan</h2>
                         </div>
-                        <span class="population">
-                            <p><strong>Population:</strong> 27,657,145</p>
-
-                        </span>
-                        <span class="region">
-                            <p><strong>Region:</strong> Asia</p>
-
-                        </span>
-                        <span class="capital">
-                            <p><strong>Capital:</strong> Kabul</p>
-
-                        </span>
+                        <ul style="list-style: none;">
+                            <li>
+                                <span class="label">Population:</span>
+                                <span class="value">27,657,145</span>
+                            </li>
+                            <li>
+                                <span class="label">Region:</span>
+                                <span class="value">Asia</span>
+                            </li>
+                            <li>
+                                <span class="label">Capital:</span>
+                                <span class="value">Kabul</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
                 <div class="card-container">
-                    <div class="img-container"> <img src="assets/images/ax.svg">
-                    </div>
+                    <img src="assets/images/ax.svg">
 
                     <div class="description-container">
                         <div class="country">
-                            <p>Åland Islands</p>
+                            <h2>Åland Islands</h2>
                         </div>
-                        <span class="population">
-                            <p><strong>Population:</strong> 28,875</p>
-
-                        </span>
-                        <span class="region">
-                            <p><strong>Region:</strong> Europ</p>
-
-                        </span>
-                        <span class="capital">
-                            <p><strong>Capital:</strong> Mariehamn</p>
-
-                        </span>
+                        <ul style="list-style: none;">
+                            <li>
+                                <span class="label">Population:</span>
+                                <span class="value">28,875</span>
+                            </li>
+                            <li>
+                                <span class="label">Region:</span>
+                                <span class="value">Europe</span>
+                            </li>
+                            <li>
+                                <span class="label">Capital:</span>
+                                <span class="value">Mariehamn</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
 
                 <div class="card-container">
-                    <div class="img-container"> <img src="assets/images/al.svg">
-                    </div>
+                    <img src="assets/images/al.svg">
 
                     <div class="description-container">
                         <div class="country">
-                            <p>Albania</p>
+                            <h2>Albania</h2>
                         </div>
-                        <span class="population">
-                            <p><strong>Population:</strong> 2,886,026</p>
-
-                        </span>
-                        <span class="region">
-                            <p><strong>Region:</strong> Europe</p>
-
-                        </span>
-                        <span class="capital">
-                            <p><strong>Capital:</strong> Tirana</p>
-
-                        </span>
+                        <ul style="list-style: none;">
+                            <li>
+                                <span class="label">Population:</span>
+                                <span class="value">2,886,026</span>
+                            </li>
+                            <li>
+                                <span class="label">Region:</span>
+                                <span class="value">Europe</span>
+                            </li>
+                            <li>
+                                <span class="label">Capital:</span>
+                                <span class="value">Tirana</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
                 <div class="card-container">
-                    <div class="img-container"> <img src="assets/images/dz.svg">
-                    </div>
+                    <img src="assets/images/dz.svg">
 
                     <div class="description-container">
                         <div class="country">
-                            <p>Algeria</p>
+                            <h2>Algeria</h2>
                         </div>
-                        <span class="population">
-                            <p><strong>Population:</strong> 40,400,000</p>
-
-                        </span>
-                        <span class="region">
-                            <p><strong>Region:</strong> Africa</p>
-
-                        </span>
-                        <span class="capital">
-                            <p><strong>Capital:</strong> Algiers</p>
-
-                        </span>
+                        <ul style="list-style: none;">
+                            <li>
+                                <span class="label">Population:</span>
+                                <span class="value">40,400,000</span>
+                            </li>
+                            <li>
+                                <span class="label">Region:</span>
+                                <span class="value">Africa</span>
+                            </li>
+                            <li>
+                                <span class="label">Capital:</span>
+                                <span class="value">Algiers</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
