detail page update

--- a/detail.html
+++ b/detail.html
@@ -18,11 +18,9 @@
 <body>
     <div class="container">
         <header class="header">
-            <h2 class="title">Where in the world?</h2>
-            <div class="dark-mode">
-                <i class="fa-regular fa-moon"></i>
-                <p>Dark Mode</p>
-            </div>
+            <h1 class="title">Where in the world?</h1>
+            <i class="dark-mode fa-regular fa-moon"><span>Dark Mode</span></i>
+        </header>
         </header>
         <div class="wrapper">
 
@@ -45,25 +43,53 @@
                     <div class="info-wrapper">
 
                         <div class="info1">
-                            <p><strong>Native Name: </strong> Belgie</p>
-                            <p><strong>Population: </strong> 11,319,511</p>
-                            <p><strong>Region: </strong> Europe</p>
-                            <p><strong>Sub Region: </strong> Western Europe</p>
-                            <p><strong>Capital: </strong> Brussels</p>
+                            <ul style="list-style: none;">
+                                <li>
+                                    <span class="label">Native Name:</span>
+                                    <span class="value">Belgie</span>
+                                </li>
+                                <li>
+                                    <span class="label">Population:</span>
+                                    <span class="value">11,319,511</span>
+                                </li>
+                                <li>
+                                    <span class="label">Region:</span>
+                                    <span class="value">Europe</span>
+                                </li>
+                                <li>
+                                    <span class="label">Sub Region:</span>
+                                    <span class="value">Western Europe</span>
+                                </li>
+                                <li>
+                                    <span class="label">Capital:</span>
+                                    <span class="value">Brussels</span>
+                                </li>
+                            </ul>
                         </div>
                         <div class="info2">
-                            <p><strong>Top Level Domain: </strong> .be</p>
-                            <p><strong>Currencies: </strong> Euro</p>
-                            <p><strong>Languages: </strong> Dutch, French, Greman</p>
+                            <ul style="list-style: none;">
+                                <li>
+                                    <span class="label">Top Level Domain: </span>
+                                    <span class="value">.be</span>
+                                </li>
+                                <li>
+                                    <span class="label">Currencies:</span>
+                                    <span class="value">Euro</span>
+                                </li>
+                                <li>
+                                    <span class="label">Languages:</span>
+                                    <span class="value">Dutch, French, Greman</span>
+                                </li>
+                            </ul>
                         </div>
 
                     </div>
                     <div class="border">
-                        <strong>Border Countries: </strong>
+                        <span>Border Countries: </span>
                         <div class="countries">
-                            <p>France</p>
-                            <p>Germany</p>
-                            <p>Netherlands</p>
+                            <span>France</span>
+                            <span>Germany</span>
+                            <span>Netherlands</span>
 
                         </div>
                     </div>
