--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
         <header class="header">
             <h1 class="title">Where in the world?</h1>
-            <i class="dark-mode fa-regular fa-moon"><span>Dark Mode</span></i>
+
+            <button class="dark-mode-button"><i class="dark-mode fa-regular fa-moon"><span>Dark Mode</span></i></button>
         </header>
 
         <div class="wrapper">
@@ -52,14 +53,14 @@
 
             <div class="cards-container">
 
-                <div class="card-container">
+                <a class="card-container" href="#">
                     <img src="assets/images/de.svg">
 
                     <div class="description-container">
                         <div class="country">
                             <h2>Germany</h2>
                         </div>
-                        <ul style="list-style: none;">
+                        <ul >
                             <li>
                                 <span class="label">Population:</span>
                                 <span class="value">81,770,900</span>
@@ -74,20 +75,20 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </a>
 
 
 
 
 
-                <div class="card-container">
+                <a class="card-container" href="#">
                     <img src="assets/images/us.svg">
 
                     <div class="description-container">
                         <div class="country">
                             <h2>United States of America</h2>
                         </div>
-                        <ul style="list-style: none;">
+                        <ul >
                             <li>
                                 <span class="label">Population:</span>
                                 <span class="value">323,947,000</span>
@@ -102,16 +103,16 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </a>
 
 
-                <div class="card-container">
+                <a class="card-container" href="#">
                     <img src="assets/images/br.svg">
                     <div class="description-container">
                         <div class="country">
                             <h2>Brazil</h2>
                         </div>
-                        <ul style="list-style: none;">
+                        <ul >
                             <li>
                                 <span class="label">Population:</span>
                                 <span class="value">206,135,893</span>
@@ -126,17 +127,17 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </a>
 
 
-                <div class="card-container">
+                <a class="card-container" href="#">
                     <img src="assets/images/is.svg">
 
                     <div class="description-container">
                         <div class="country">
                             <h2>Iceland</h2>
                         </div>
-                        <ul style="list-style: none;">
+                        <ul >
                             <li>
                                 <span class="label">Population:</span>
                                 <span class="value">334,300</span>
@@ -151,17 +152,17 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </a>
 
 
-                <div class="card-container">
+                <a class="card-container" href="#">
                     <img src="assets/images/af.svg">
 
                     <div class="description-container">
                         <div class="country">
                             <h2>Afghanistan</h2>
                         </div>
-                        <ul style="list-style: none;">
+                        <ul >
                             <li>
                                 <span class="label">Population:</span>
                                 <span class="value">27,657,145</span>
@@ -176,16 +177,16 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </a>
 
-                <div class="card-container">
+                <a class="card-container" href="#">
                     <img src="assets/images/ax.svg">
 
                     <div class="description-container">
                         <div class="country">
                             <h2>Åland Islands</h2>
                         </div>
-                        <ul style="list-style: none;">
+                        <ul >
                             <li>
                                 <span class="label">Population:</span>
                                 <span class="value">28,875</span>
@@ -200,17 +201,17 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </a>
 
 
-                <div class="card-container">
+                <a class="card-container" href="#">
                     <img src="assets/images/al.svg">
 
                     <div class="description-container">
                         <div class="country">
                             <h2>Albania</h2>
                         </div>
-                        <ul style="list-style: none;">
+                        <ul >
                             <li>
                                 <span class="label">Population:</span>
                                 <span class="value">2,886,026</span>
@@ -225,16 +226,16 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </a>
 
-                <div class="card-container">
+                <a class="card-container" href="#">
                     <img src="assets/images/dz.svg">
 
                     <div class="description-container">
                         <div class="country">
                             <h2>Algeria</h2>
                         </div>
-                        <ul style="list-style: none;">
+                        <ul >
                             <li>
                                 <span class="label">Population:</span>
                                 <span class="value">40,400,000</span>
@@ -249,7 +250,8 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </a>
+
             </div>
         </div>
     </div>
