detail and main fixed

--- a/detail.html
+++ b/detail.html
@@ -19,7 +19,7 @@
     <div class="container">
         <header class="header">
             <h1 class="title">Where in the world?</h1>
-            <i class="dark-mode fa-regular fa-moon"><span>Dark Mode</span></i>
+            <button class="dark-mode-button"><i class="dark-mode fa-regular fa-moon"><span>Dark Mode</span></i></button>
         </header>
         </header>
         <div class="wrapper">
@@ -43,7 +43,7 @@
                     <div class="info-wrapper">
 
                         <div class="info1">
-                            <ul style="list-style: none;">
+                            <ul>
                                 <li>
                                     <span class="label">Native Name:</span>
                                     <span class="value">Belgie</span>
@@ -67,7 +67,7 @@
                             </ul>
                         </div>
                         <div class="info2">
-                            <ul style="list-style: none;">
+                            <ul>
                                 <li>
                                     <span class="label">Top Level Domain: </span>
                                     <span class="value">.be</span>
@@ -90,9 +90,9 @@
                             <span>France</span>
                             <span>Germany</span>
                             <span>Netherlands</span>
-
                         </div>
                     </div>
+
 
 
                 </div>
