--- a/detail.html
+++ b/detail.html
@@ -8,19 +8,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <!-- Title -->
     <title>Index | Week 2</title>
-    
     <!-- Required Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/detail.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-
-
-
 </head>
 
 <body>
@@ -33,31 +29,27 @@
             </button>
         </div>
     </nav>
-    <!-- NavBar -->
+    <!-- End-NavBar -->
 
     <!-- Button -->
     <div class="container py-5 px-4 px-lg-0">
-        <button type="button" class="btn back-btn px-lg-4 py-2 px-4 ">
+        <button type="button" class="custom-back-btn btn shadow">
             <i class="fa-solid fa-arrow-left"><span>Back</span></i>
         </button>
     </div>
-    <!-- Button -->
+    <!-- End-Button -->
 
     <!-- Content -->
     <div class="container px-4 px-lg-0 my-4">
         <div class="row">
-            <div class="col-lg-5 col-12">
+            <div class="col-lg-5 col-12 ">
                 <img class="img-fluid" src="assets/images/bl.svg">
             </div>
-            <!--  -->
-            <!--  -->
             <!--  -->
             <div class="custom-col col-lg-6 col-12">
                 <div class="row row-cols-1 title mb-4 mt-5">
                     <span>Belgium</span>
                 </div>
-                <!--  -->
-                <!--  -->
                 <!--  -->
                 <div class="d-flex justify-content-between flex-column flex-md-row">
                     <div class="info1">
@@ -84,10 +76,11 @@
                             </li>
                         </ul>
                     </div>
+                    <!--  -->
                     <div class="info2 mt-4 mt-sm-0">
                         <ul>
                             <li>
-                                <span class="label">Top Level Domain: </span>
+                                <span class="label">Top Level Domain:</span>
                                 <span class="value">.be</span>
                             </li>
                             <li>
@@ -96,17 +89,17 @@
                             </li>
                             <li>
                                 <span class="label">Languages:</span>
-                                <span class="value">Dutch, French, Greman</span>
+                                <span class="value">Dutch, French, German</span>
                             </li>
                         </ul>
                     </div>
                 </div>
-
-                <div class="w-100 my-3 my-lg-5 d-flex flex-column flex-lg-row align-items-lg-center align-items-start">
+                <!--  -->
+                <div class="w-100 my-4 my-lg-5 d-flex flex-column flex-lg-row align-items-lg-center align-items-start">
                     <div class="custom-border">
                         <span>Border Countries:</span>
                     </div>
-                    <div class="w-100 d-flex flex-row flex-wrap my-3 my-md-0">
+                    <div class="w-100 d-flex flex-row flex-wrap my-3 my-lg-0 ">
                         <span class="text">France</span>
                         <span class="text">Germany</span>
                         <span class="text">Netherlands</span>
@@ -114,15 +107,20 @@
                 </div>
             </div>
             <!--  -->
-            <!--  -->
-            <!--  -->
-        </div> <!-- Row -->
-    </div> <!-- Container -->
-
-    <!-- Content -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script> 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>   
+        </div>
+    </div>
+    <!-- End-Content -->
+    <!-- Script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
+    <!-- End-Script -->
 
 </body>
 
