--- a/detail.html
+++ b/detail.html
@@ -32,7 +32,7 @@
     <!-- End-NavBar -->
 
     <!-- Button -->
-    <div class="container py-5 px-4 px-lg-0">
+    <div class="container py-5 px-5 px-lg-0">
         <button type="button" class="custom-back-btn btn shadow">
             <i class="fa-solid fa-arrow-left"><span>Back</span></i>
         </button>
@@ -40,14 +40,14 @@
     <!-- End-Button -->
 
     <!-- Content -->
-    <div class="container px-4 px-lg-0 my-4">
-        <div class="row">
-            <div class="col-lg-5 col-12 ">
+    <div class="container px-5 px-lg-0 my-4">
+        <div class="row justify-content-between align-items-center">
+            <div class="col-lg-5 col-12 mb-5">
                 <img class="img-fluid" src="assets/images/bl.svg">
             </div>
             <!--  -->
-            <div class="custom-col col-lg-6 col-12">
-                <div class="row row-cols-1 title mb-4 mt-5">
+            <div class="col-lg-6 col-12">
+                <div class="row row-cols-1 title">
                     <span>Belgium</span>
                 </div>
                 <!--  -->
