--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
             <!-- DrowDown List -->
             <div class="col-auto">
                 <div class="dropdown-container">
-                    <div class="dropdown-select">
-                        <span class="select">Filter by Region</span>
-                        <i class="fa fa-caret-down icon"></i>
-                    </div>
-                    <div class="dropdown-list">
-                        <div class="dropdown-list_item">Africa</div>
-                        <div class="dropdown-list_item">America</div>
-                        <div class="dropdown-list_item">Asia</div>
-                        <div class="dropdown-list_item">Europe</div>
-                        <div class="dropdown-list_item">Oceania</div>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown button
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -76,14 +76,14 @@
     <div class="container mb-5">
         <div class="row gy-5 gx-lg-5">
             <!--  -->
-            <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
+            <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3">
                 <a class="card">
                     <img src="assets/images/de.svg" class="card-img-top" alt="Germany">
-                    <div class="card-body">
-                        <span class="card-title">Germany</span>
+                    <div class="card-body d-flex flex-column gap-2 mx-2">
+                        <span class="card-title mt-3">Germany</span>
                         <ul>
                             <li>
-                                <span class="label">Population:</span>
+                                <span class="label bold">Population:</span>
                                 <span class="value">81,770,900</span>
                             </li>
                             <li>
@@ -102,8 +102,8 @@
             <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
                 <a class="card">
                     <img src="assets/images/us.svg" class="card-img-top" alt="United States of America">
-                    <div class="card-body">
-                        <span class="card-title">United States of America</span>
+                    <div class="card-body d-flex flex-column gap-2 mx-2">
+                        <span class="card-title mt-3">United States of America</span>
                         <ul>
                             <li>
                                 <span class="label">Population:</span>
@@ -125,8 +125,8 @@
             <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
                 <a class="card">
                     <img src="assets/images/br.svg" class="card-img-top" alt="Brazil">
-                    <div class="card-body">
-                        <span class="card-title">Brazil</span>
+                    <div class="card-body d-flex flex-column gap-2 mx-2">
+                        <span class="card-title mt-3">Brazil</span>
                         <ul>
                             <li>
                                 <span class="label">Population:</span>
@@ -148,8 +148,8 @@
             <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
                 <a class="card">
                     <img src="assets/images/is.svg" class="card-img-top" alt="Iceland">
-                    <div class="card-body">
-                        <span class="card-title">Iceland</span>
+                    <div class="card-body d-flex flex-column gap-2 mx-2">
+                        <span class="card-title mt-3">Iceland</span>
                         <ul>
                             <li>
                                 <span class="label">Population:</span>
@@ -171,8 +171,8 @@
             <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
                 <a class="card">
                     <img src="assets/images/af.svg" class="card-img-top" alt="Afghanistan">
-                    <div class="card-body">
-                        <span class="card-title">Afghanistan</span>
+                    <div class="card-body d-flex flex-column gap-2 mx-2">
+                        <span class="card-title mt-3">Afghanistan</span>
                         <ul>
                             <li>
                                 <span class="label">Population:</span>
@@ -194,8 +194,8 @@
             <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
                 <a class="card">
                     <img src="assets/images/ax.svg" class="card-img-top" alt="Åland Islands">
-                    <div class="card-body">
-                        <span class="card-title">Åland Islands</span>
+                    <div class="card-body d-flex flex-column gap-2 mx-2">
+                        <span class="card-title mt-3">Åland Islands</span>
                         <ul>
                             <li>
                                 <span class="label">Population:</span>
@@ -217,8 +217,8 @@
             <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
                 <a class="card">
                     <img src="assets/images/al.svg" class="card-img-top" alt="Albania">
-                    <div class="card-body">
-                        <span class="card-title">Albania</span>
+                    <div class="card-body d-flex flex-column gap-2 mx-2">
+                        <span class="card-title mt-3">Albania</span>
                         <ul>
                             <li>
                                 <span class="label">Population:</span>
@@ -240,8 +240,8 @@
             <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
                 <a class="card">
                     <img src="assets/images/dz.svg" class="card-img-top" alt="Algeria">
-                    <div class="card-body">
-                        <span class="card-title">Algeria</span>
+                    <div class="card-body d-flex flex-column gap-2 mx-2">
+                        <span class="card-title mt-3">Algeria</span>
                         <ul>
                             <li>
                                 <span class="label">Population:</span>
@@ -273,6 +273,9 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 </body>
 
