--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css" />
-
     <!-- FontAwesome -->
-
 </head>
 
-<body>
+<body onload="">
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg shadow-sm ">
         <div class="container justify-content-between py-3">
@@ -34,14 +32,12 @@
         </div>
     </nav>
     <!-- NavBar -->
-
-
     <!-- SearchAndFilterContainer -->
     <div class="container my-5">
         <div class="row justify-content-between gy-5">
             <!-- Search -->
             <div class="col-md-5 col-12">
-                <div class="input-group search-div">
+                <div class="input-group search-div shadow-sm">
                     <span class="input-group-text border-0 py-3" id="inputGroup-sizing-default"><i
                             class="fa-solid fa-magnifying-glass ps-4"></i>
                     </span>
@@ -52,16 +48,18 @@
             <!-- Search -->
             <!-- DrowDown List -->
             <div class="col-auto">
-                <div class="dropdown-container">
+                <div class="dropdown-container shadow-sm">
                     <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="btn dropdown-btn btn-lg dropdown-toggle justify-content-between" type="button"
+                            id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                             Dropdown button
                         </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <ul class="dropdown-menu w-100 mt-1 p-3" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Africa</a></li>
+                            <li><a class="dropdown-item" href="#">America</a></li>
+                            <li><a class="dropdown-item" href="#">Asia</a></li>
+                            <li><a class="dropdown-item" href="#">Europe</a></li>
+                            <li><a class="dropdown-item" href="#">Oceania</a></li>
                         </ul>
                     </div>
                 </div>
@@ -70,198 +68,17 @@
         </div>
     </div>
     <!-- SearchAndFilterContainer -->
-
-
     <!-- Card's Container -->
     <div class="container mb-5">
-        <div class="row gy-5 gx-lg-5">
-            <!--  -->
-            <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3">
-                <a class="card">
-                    <img src="assets/images/de.svg" class="card-img-top" alt="Germany">
-                    <div class="card-body d-flex flex-column gap-2 mx-2">
-                        <span class="card-title mt-3">Germany</span>
-                        <ul>
-                            <li>
-                                <span class="label bold">Population:</span>
-                                <span class="value">81,770,900</span>
-                            </li>
-                            <li>
-                                <span class="label">Region:</span>
-                                <span class="value">Europ</span>
-                            </li>
-                            <li>
-                                <span class="label">Capital:</span>
-                                <span class="value">Berlin</span>
-                            </li>
-                        </ul>
-                    </div>
-                </a>
+        <!-- Card's Contaier -->
+        <div class="row gy-5 gx-lg-5" id="cardContainer"></div>
+        <!-- Loading Spinner -->
+        <div id="loadingSpinner" class="text-center p-5 d-none">
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
             </div>
-            <!--  -->
-            <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
-                <a class="card">
-                    <img src="assets/images/us.svg" class="card-img-top" alt="United States of America">
-                    <div class="card-body d-flex flex-column gap-2 mx-2">
-                        <span class="card-title mt-3">United States of America</span>
-                        <ul>
-                            <li>
-                                <span class="label">Population:</span>
-                                <span class="value">323,947,000</span>
-                            </li>
-                            <li>
-                                <span class="label">Region:</span>
-                                <span class="value">Americas</span>
-                            </li>
-                            <li>
-                                <span class="label">Capital:</span>
-                                <span class="value">Washington, D.C.</span>
-                            </li>
-                        </ul>
-                    </div>
-                </a>
-            </div>
-            <!--  -->
-            <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
-                <a class="card">
-                    <img src="assets/images/br.svg" class="card-img-top" alt="Brazil">
-                    <div class="card-body d-flex flex-column gap-2 mx-2">
-                        <span class="card-title mt-3">Brazil</span>
-                        <ul>
-                            <li>
-                                <span class="label">Population:</span>
-                                <span class="value">206,135,893</span>
-                            </li>
-                            <li>
-                                <span class="label">Region:</span>
-                                <span class="value">Americas</span>
-                            </li>
-                            <li>
-                                <span class="label">Capital:</span>
-                                <span class="value">Brasília</span>
-                            </li>
-                        </ul>
-                    </div>
-                </a>
-            </div>
-            <!--  -->
-            <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
-                <a class="card">
-                    <img src="assets/images/is.svg" class="card-img-top" alt="Iceland">
-                    <div class="card-body d-flex flex-column gap-2 mx-2">
-                        <span class="card-title mt-3">Iceland</span>
-                        <ul>
-                            <li>
-                                <span class="label">Population:</span>
-                                <span class="value">334,300</span>
-                            </li>
-                            <li>
-                                <span class="label">Region:</span>
-                                <span class="value">Europe</span>
-                            </li>
-                            <li>
-                                <span class="label">Capital:</span>
-                                <span class="value">Reykjavík</span>
-                            </li>
-                        </ul>
-                    </div>
-                </a>
-            </div>
-            <!--  -->
-            <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
-                <a class="card">
-                    <img src="assets/images/af.svg" class="card-img-top" alt="Afghanistan">
-                    <div class="card-body d-flex flex-column gap-2 mx-2">
-                        <span class="card-title mt-3">Afghanistan</span>
-                        <ul>
-                            <li>
-                                <span class="label">Population:</span>
-                                <span class="value">27,657,145</span>
-                            </li>
-                            <li>
-                                <span class="label">Region:</span>
-                                <span class="value">Asia</span>
-                            </li>
-                            <li>
-                                <span class="label">Capital:</span>
-                                <span class="value">Kabul</span>
-                            </li>
-                        </ul>
-                    </div>
-                </a>
-            </div>
-            <!--  -->
-            <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
-                <a class="card">
-                    <img src="assets/images/ax.svg" class="card-img-top" alt="Åland Islands">
-                    <div class="card-body d-flex flex-column gap-2 mx-2">
-                        <span class="card-title mt-3">Åland Islands</span>
-                        <ul>
-                            <li>
-                                <span class="label">Population:</span>
-                                <span class="value">28,875</span>
-                            </li>
-                            <li>
-                                <span class="label">Region:</span>
-                                <span class="value">Europe</span>
-                            </li>
-                            <li>
-                                <span class="label">Capital:</span>
-                                <span class="value">Mariehamn</span>
-                            </li>
-                        </ul>
-                    </div>
-                </a>
-            </div>
-            <!--  -->
-            <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
-                <a class="card">
-                    <img src="assets/images/al.svg" class="card-img-top" alt="Albania">
-                    <div class="card-body d-flex flex-column gap-2 mx-2">
-                        <span class="card-title mt-3">Albania</span>
-                        <ul>
-                            <li>
-                                <span class="label">Population:</span>
-                                <span class="value">2,886,026</span>
-                            </li>
-                            <li>
-                                <span class="label">Region:</span>
-                                <span class="value">Europe</span>
-                            </li>
-                            <li>
-                                <span class="label">Capital:</span>
-                                <span class="value">Tirana</span>
-                            </li>
-                        </ul>
-                    </div>
-                </a>
-            </div>
-            <!--  -->
-            <div class="card-container col-12 col-md-6 col-lg-4 col-xxl-3 ">
-                <a class="card">
-                    <img src="assets/images/dz.svg" class="card-img-top" alt="Algeria">
-                    <div class="card-body d-flex flex-column gap-2 mx-2">
-                        <span class="card-title mt-3">Algeria</span>
-                        <ul>
-                            <li>
-                                <span class="label">Population:</span>
-                                <span class="value">40,400,000</span>
-                            </li>
-                            <li>
-                                <span class="label">Region:</span>
-                                <span class="value">Africa</span>
-                            </li>
-                            <li>
-                                <span class="label">Capital:</span>
-                                <span class="value">Algiers</span>
-                            </li>
-                        </ul>
-                    </div>
-                </a>
-            </div>
-            <!--  -->
+            <h1 class="mt-3">Loading please wait...</h1>
         </div>
-    </div>
     </div>
 
     <!-- Cards Container -->
@@ -277,6 +94,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script src="./javascript/CardsFetchApi.js"></script>
 </body>
 
 </html>
