--- a/index.html
+++ b/index.html
@@ -52,14 +52,15 @@
                     <div class="dropdown">
                         <button class="btn dropdown-btn btn-lg dropdown-toggle justify-content-between" type="button"
                             id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown button
+                            Filter by region
                         </button>
                         <ul class="dropdown-menu w-100 mt-1 p-3" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="#">Africa</a></li>
-                            <li><a class="dropdown-item" href="#">America</a></li>
-                            <li><a class="dropdown-item" href="#">Asia</a></li>
-                            <li><a class="dropdown-item" href="#">Europe</a></li>
-                            <li><a class="dropdown-item" href="#">Oceania</a></li>
+                            <li><a class="dropdown-item">No Filter</a></li>
+                            <li><a class="dropdown-item">Africa</a></li>
+                            <li><a class="dropdown-item">Americas</a></li>
+                            <li><a class="dropdown-item">Asia</a></li>
+                            <li><a class="dropdown-item">Europe</a></li>
+                            <li><a class="dropdown-item">Oceania</a></li>
                         </ul>
                     </div>
                 </div>
@@ -71,7 +72,7 @@
     <!-- Card's Container -->
     <div class="container mb-5">
         <!-- Card's Contaier -->
-        <div class="row gy-5 gx-lg-5" id="cardContainer"></div>
+        <div class="row gy-5 gx-lg-5 d-none" id="cardContainer"></div>
         <!-- Loading Spinner -->
         <div id="loadingSpinner" class="text-center p-5 d-none">
             <div class="spinner-border" role="status">
