--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css" />
     <!-- FontAwesome -->
+    <script>
+        if (window.location.pathname === '/') {
+          window.location.replace('/WhereInTheWorld/');
+        }
+      </script>
 </head>
 
 <body onload="">
