--- a/detail.html
+++ b/detail.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg shadow-sm mb-lg-3 mb-0">
         <div class="container justify-content-between py-4">
             <span class="title">Where in the world?</span>
-            <button type="button" class="btn p-0">
+            <button type="button" class="btn p-0" id="icon">
                 <i class="dark-mode fa-regular fa-moon"><span>Dark Mode</span></i>
             </button>
         </div>
@@ -49,7 +49,7 @@
     <!-- End-loadingSpinner -->
 
     <!-- Error Message -->
-    <div id="errorMsg" class="alert alert-danger h2 text-center d-none">
+    <div id="errorMsg" class="container alert alert-danger h2 text-center d-none">
         <h1>An error occurred while fetching data. Please try again later.</h1>
     </div>
     <!-- End-Error Message -->
@@ -134,7 +134,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
-    <script src="./javascript/detail.js"></script>
+    <script src="./javascript/DetailPage.js"></script>
+    <script src="./javascript/DarkMode.js"></script>
     <!-- End-Script -->
 </body>
 
