--- a/index.html
+++ b/index.html
@@ -19,11 +19,6 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css" />
     <!-- FontAwesome -->
-    <script>
-        if (window.location.pathname === '/') {
-          window.location.replace('/WhereInTheWorld/');
-        }
-      </script>
 </head>
 
 <body onload="">
@@ -31,7 +26,7 @@
     <nav class="navbar navbar-expand-lg shadow-sm ">
         <div class="container justify-content-between py-3">
             <span class="title">Where in the world?</span>
-            <button type="button" class="btn p-0">
+            <button type="button" class="btn p-0" id="icon">
                 <i class="dark-mode fa-regular fa-moon"><span>Dark Mode</span></i>
             </button>
         </div>
@@ -46,7 +41,7 @@
                     <span class="input-group-text border-0 py-3" id="inputGroup-sizing-default"><i
                             class="fa-solid fa-magnifying-glass ps-4"></i>
                     </span>
-                    <input type="text" placeholder="Search for a country" class="form-control"
+                    <input type="text"id="input" placeholder="Search for a country" class="form-control"
                         aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                 </div>
             </div>
@@ -56,10 +51,10 @@
                 <div class="dropdown-container shadow-sm">
                     <div class="dropdown">
                         <button class="btn dropdown-btn btn-lg dropdown-toggle justify-content-between" type="button"
-                            id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                             data-bs-toggle="dropdown" aria-expanded="false" id="dropdownButton">
                             Filter by region
                         </button>
-                        <ul class="dropdown-menu w-100 mt-1 p-3" aria-labelledby="dropdownMenuButton1">
+                        <ul class="dropdown-menu w-100 mt-1 p-3" aria-labelledby="dropdownMenuButton1" id="dropdownMenu">
                             <li><a class="dropdown-item">No Filter</a></li>
                             <li><a class="dropdown-item">Africa</a></li>
                             <li><a class="dropdown-item">Americas</a></li>
@@ -100,7 +95,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script src="./javascript/CardsFetchApi.js"></script>
+    <script src="./javascript/HomePage.js"></script>
+    <script src="./javascript/DarkMode.js"></script>
 </body>
 
 </html>
