--- a/detail.html
+++ b/detail.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
-<body onload="fetchDetail()">
+<body onload="init()">
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg shadow-sm mb-lg-3 mb-0">
         <div class="container justify-content-between py-4">
