--- a/detail.html
+++ b/detail.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Where in the world?" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <!-- Title -->
-    <title>Index | Week 2</title>
+    <title>Index | Week 3</title>
     <!-- Required Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,8 +49,8 @@
     <!-- End-loadingSpinner -->
 
     <!-- Error Message -->
-    <div id="errorMsg" class="container alert alert-danger h2 text-center d-none">
-        <h1>An error occurred while fetching data. Please try again later.</h1>
+    <div id="errorMsg" class="container-fluid alert alert-danger h2 text-center d-none">
+        <h2 id="errorMessage"></h2>
     </div>
     <!-- End-Error Message -->
 
