--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <!-- SearchAndFilterContainer -->
     <!-- Card's Container -->
-    <div class="container mb-5">
+    <div id="root" class="container mb-5">
         <!-- Card's Contaier -->
         <div class="row gy-5 gx-lg-5 d-none" id="cardContainer"></div>
         <!-- Loading Spinner -->
