--- a/detail.html
+++ b/detail.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
-<body onload="init()">
+<body>
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg shadow-sm mb-lg-3 mb-0">
         <div class="container justify-content-between py-4">
@@ -124,8 +124,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
-    <script src="./assets/js/DetailPage.js"></script>
-    <script src="./assets/js/DarkMode.js"></script>
+    <script type="module" src="./assets/js/DetailPage.js"></script>
+    <script type="module" src="./assets/js/DarkMode.js"></script>
     <!-- End-Script -->
 </body>
 
