--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script type="module" src="./assets/js/main/HomePage.js"></script>
-    <script type="module" src="./assets/js/DarkMode.js"></script>
+    <script type="module" src="./assets/js/themes/DarkMode.js"></script>
 </body>
 
 </html>
