--- a/detail.html
+++ b/detail.html
@@ -125,7 +125,7 @@
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
     <script type="module" src="./assets/js/main/DetailPage.js"></script>
-    <script type="module" src="./assets/js/DarkMode.js"></script>
+    <script type="module" src="./assets/js/themes/DarkMode.js"></script>
     <!-- End-Script -->
 </body>
 
